# Stellar-GeoLink

./: .gitignore  ADVANCED_SETTINGS_LOGGING_IMPROVEMENTS.md  AI_INTEGRATION_GUIDE.md  ANCHOR_EVENTS_IMPLEMENTATION.md  API_CONTRACT_INTEGRATION_SUMMARY.md  AZURE_DATABASE_FIREWALL_FIX.md  AZURE_DATABASE_STATUS.md  AZURE_SETUP_COMPLETE.md  AZURE_WEBAPP_CONFIG.md  BRANCH_PROTECTION_SETUP.md  CHECKPOINT_EVENTS_EXPLAINED.md  CONTRACT_CONFIGURATION.md  CONTRACT_DEPLOYMENT_GUIDE.md  CONTRACT_INTROSPECTION_QUESTION.md  CONTRACT_MANAGEMENT_GUIDE.md  CUSTOM_CONTRACT_INTEGRATION_ANALYSIS.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_SCHEMA_NOW.md  Deploy-AzureSchema.ps1  ENVIRONMENT_SETUP.md  ENVIRONMENT_SETUP_COMPLETE.md  ENVIRONMENT_SETUP_GUIDE.md  EXECUTION_RULE_IMPROVEMENTS.md  FINAL_ENVIRONMENT_SETUP.md  FRONTEND_BUILD_FIX.md  GEOLINK_EVENTS_LOGGING.md  GEOLINK_OVERVIEW.md  GITHUB_ACTIONS_SETUP.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LOGGING_CLEANUP_SUMMARY.md  MAPBOX_TOKEN_FIX.md  (+61 more)
backend/: .gitignore  DATA_CONSUMER_API_ENDPOINTS.md  POSTGIS_IMPLEMENTATION.md  WALLET_PROVIDER_API_ENDPOINTS.md  ZK_PROOF_SETUP.md  app.js  cleanup-empty-queue-entries.js  database-setup-guide.md  package-lock.json  package.json  swagger-ui-config.js  swagger.js  test-redis.js
database/: schema.sql
docs/: CONTRACT_DEPLOYMENT.md  INTENT_SYSTEM.md  README.md  (+7 more)
soroban-contracts/example-nft/contracts/token/: Cargo.toml
(+289 files in other folders)
