[package]
name = "soroban-token-contract"
description = "Soroban standard token contract"
version = "0.0.6"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "23.0.1" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
